# clint_server

./: CMakeLists.txt  README.md  configure.sh  log.txt  start_client.sh  start_server.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
src/objects/: CMakeLists.txt  commands.hpp  message.hpp  msg_objects.cpp  msg_objects.hpp  objects.cpp
src/server/: CMakeLists.txt  app.cpp  app.hpp  connect.cpp  connect.hpp  hub.cpp  hub.hpp  logger.cpp  logger.hpp  main.cpp  server.cpp  server.hpp
